--- a/index.html
+++ b/index.html
@@ -338,6 +338,8 @@ Qualquer coisa procurar o @rdmuniz :)
                              <li><a href="http://intheair.es/tools/physical-prototype-video.html"><i class="icon-globe"></i>In the air</a></li>
                             <li><a href="http://youtu.be/ystkKXzt9Wk"><i class="icon-globe"></i>Flight Patterns</a></li>
                             <li><a href="http://vimeo.com/11506746"><i class="icon-globe"></i>Empires - Pedro Miguel Cruz</a></li>
+                            <li><a href="http://hint.fm/wind/"><i class="icon-globe"></i>Wind Map - Fernanda Viegas</a></li>
+                           
                           </ul>                      
                     </div>
                   </div>
