--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Qualquer coisa procurar o @rdmuniz :)
 
     <div class="container">
           <div class="page-header">
-            <h1> Computação Aplicada ao Design I - 2016.1 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 11.10.2016</small></h1>
+            <h1> Computação Aplicada ao Design I - 2016.1 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 18.10.2016</small></h1>
           </div>
 
       <div class="row" id="content">
@@ -295,12 +295,12 @@ Qualquer coisa procurar o @rdmuniz :)
                     </div>
                   </div>
                 </div>
-
+-->
             	<div class="accordion-group">
                   <div class="accordion-heading">
                     <h3>
                       <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordionAulas" data-target="#aula03">
-                      03. Que programa eu uso??
+                      03. Extensões e formatos
                       </a>
                     </h3>
                   </div>
@@ -308,13 +308,13 @@ Qualquer coisa procurar o @rdmuniz :)
                   <div id="aula03" class="accordion-body collapse">
                     <div class="accordion-inner">
                           <p class="pull-right">
-                            <a href="downloads/aula03.zip" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
-                            <small>Versão de 17.05.2016  </small>
+                            <a href="downloads/aula03.pdf" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
+                            <small>Versão de 18.10.2016  </small>
                           </p>                          
                     </div>
                   </div>
                 </div>
--->
+
             	  <div class="accordion-group">
                   <div class="accordion-heading">
                     <h3>
