--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Qualquer coisa procurar o @rdmuniz :)
 
     <div class="container">
           <div class="page-header">
-            <h1> Computação Aplicada ao Design I - 2016.1 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 18.10.2016</small></h1>
+            <h1> Computação Aplicada ao Design I - 2016.1 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 31.01.2017</small></h1>
           </div>
 
       <div class="row" id="content">
@@ -239,7 +239,7 @@ Qualquer coisa procurar o @rdmuniz :)
                     </div>
                   </div>
                 </div>
-
+-->
                 <div class="accordion-group">
                   <div class="accordion-heading">
                     <h3>
@@ -253,7 +253,7 @@ Qualquer coisa procurar o @rdmuniz :)
                     <div class="accordion-inner">
                           <p class="pull-right">
                             <a href="downloads/aula05.zip" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
-                            <small>Versão de 08.06.2016</small>
+                            <small>Versão de 31.01.2017</small>
                           </p>   
                     </div>
                   </div>
@@ -264,7 +264,7 @@ Qualquer coisa procurar o @rdmuniz :)
                   <div class="accordion-heading">
                     <h3>
                       <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordionAulas" data-target="#aula04">
-                      04. Que programa eu uso? - Continuação
+                      04. Que programa eu uso? 
                       </a>
                     </h3>
                   </div>
@@ -272,8 +272,8 @@ Qualquer coisa procurar o @rdmuniz :)
                   <div id="aula04" class="accordion-body collapse">
                     <div class="accordion-inner">
                           <p class="pull-right">
-                            <a href="downloads/aula04.zip" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
-                            <small>Versão de 31.05.2016</small>
+                            <a href="downloads/aula04.pdf" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
+                            <small>Versão de 31.01.2017</small>
                           </p>   
 
 
@@ -295,7 +295,7 @@ Qualquer coisa procurar o @rdmuniz :)
                     </div>
                   </div>
                 </div>
--->
+
             	<div class="accordion-group">
                   <div class="accordion-heading">
                     <h3>
