--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Qualquer coisa procurar o @rdmuniz :)
                   <div class="accordion-heading">
                     <h3>
                       <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordionAulas" data-target="#aula08">
-                      08. Photoshop - recorte em perspectiva, correção linha do horizonte
+                      08. Photoshop - recorte em perspectiva, pintura, correção linha do horizonte. Exercício atualizado!
                       </a>
                     </h3>
                   </div>
