--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Qualquer coisa procurar o @rdmuniz :)
 
     <div class="container">
           <div class="page-header">
-            <h1> Computação Aplicada ao Design I - 2016.1 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 07.03.2017</small></h1>
+            <h1> Computação Aplicada ao Design I - 2016.1 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 14.03.2017</small></h1>
           </div>
 
       <div class="row" id="content">
@@ -121,12 +121,12 @@ Qualquer coisa procurar o @rdmuniz :)
                     </div>
                   </div>
                 </div>
-
+-->
              <div class="accordion-group">
                   <div class="accordion-heading">
                     <h3>
                       <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordionAulas" data-target="#aula10">
-                      10. Illustrator - formas, vetorização, padrões
+                      10. Illustrator - formas, cores, pen tool (caneta), vetorização, padrões
                       </a>
                     </h3>
                   </div>
@@ -135,12 +135,12 @@ Qualquer coisa procurar o @rdmuniz :)
                     <div class="accordion-inner">
                           <p class="pull-right">
                             <a href="downloads/aula10.zip" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
-                            <small>Versão de 12.07.2016</small>
+                            <small>Versão de 14.03.2017</small>
                           </p>   
                     </div>
                   </div>
                 </div>
--->
+
  
             <div class="accordion-group">
                   <div class="accordion-heading">
