--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Qualquer coisa procurar o @rdmuniz :)
                   <div id="aula10" class="accordion-body collapse">
                     <div class="accordion-inner">
                           <p class="pull-right">
-                            <a href="downloads/aula10.zip" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
+                            <a href="downloads/aula10-ok.zip" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
                             <small>Versão de 14.03.2017</small>
                           </p>   
                     </div>
