--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Qualquer coisa procurar o @rdmuniz :)
 
     <div class="container">
           <div class="page-header">
-            <h1> Computação Aplicada ao Design I - 2016.1 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 20.03.2017</small></h1>
+            <h1> Computação Aplicada ao Design I - 2016.1 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 21.03.2017</small></h1>
           </div>
 
       <div class="row" id="content">
@@ -137,6 +137,10 @@ Qualquer coisa procurar o @rdmuniz :)
                             <a href="downloads/aula10-ok.zip" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
                             <small>Versão de 14.03.2017</small>
                           </p>   
+                          <h3>Links</h3>
+                          <ul class="unstyled">
+                            <li><a href="downloads/aula10-ex.pdf"><i class="icon-globe"></i>Exercícios Aula 09</a></li>
+                           </ul>
                     </div>
                   </div>
                 </div>
@@ -157,6 +161,11 @@ Qualquer coisa procurar o @rdmuniz :)
                             <a href="downloads/aula09.zip" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
                             <small>Versão de 07.03.2017</small>
                           </p>   
+
+                           <h3>Links</h3>
+                          <ul class="unstyled">
+                            <li><a href="downloads/aula9-ex.pdf"><i class="icon-globe"></i>Exercícios Aula 09</a></li>
+                           </ul>
                     </div>
                   </div>
                 </div>
