--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Qualquer coisa procurar o @rdmuniz :)
 
     <div class="container">
           <div class="page-header">
-            <h1> Computação Aplicada ao Design I - 2016.1 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 21.03.2017</small></h1>
+            <h1> Computação Aplicada ao Design I - 2016.2 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 21.03.2017</small></h1>
           </div>
 
       <div class="row" id="content">
@@ -139,7 +139,7 @@ Qualquer coisa procurar o @rdmuniz :)
                           </p>   
                           <h3>Links</h3>
                           <ul class="unstyled">
-                            <li><a href="downloads/aula10-ex.pdf"><i class="icon-globe"></i>Exercícios Aula 09</a></li>
+                            <li><a href="downloads/aula10-ex-ok.pdf"><i class="icon-globe"></i>Exercícios Aula 09</a></li>
                            </ul>
                     </div>
                   </div>
@@ -164,7 +164,7 @@ Qualquer coisa procurar o @rdmuniz :)
 
                            <h3>Links</h3>
                           <ul class="unstyled">
-                            <li><a href="downloads/aula9-ex.pdf"><i class="icon-globe"></i>Exercícios Aula 09</a></li>
+                            <li><a href="downloads/aula9-ex-ok.pdf"><i class="icon-globe"></i>Exercícios Aula 09</a></li>
                            </ul>
                     </div>
                   </div>
