--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Qualquer coisa procurar o @rdmuniz :)
 
     <div class="container">
           <div class="page-header">
-            <h1> Computação Aplicada ao Design I - 2016.2 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 21.03.2017</small></h1>
+            <h1> Computação Aplicada ao Design I - 2016.2 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 28.03.2017</small></h1>
           </div>
 
       <div class="row" id="content">
@@ -64,7 +64,6 @@ Qualquer coisa procurar o @rdmuniz :)
             <h2>Aulas</h2>
 
             <div class="accordion" id="accordionAulas">
-<!--  
             <div class="accordion-group">
                   <div class="accordion-heading">
                     <h3>
@@ -77,8 +76,8 @@ Qualquer coisa procurar o @rdmuniz :)
                   <div id="aula13" class="accordion-body collapse">
                     <div class="accordion-inner">
                           <p class="pull-right">
-                            <a href="downloads/prova03.pdf" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
-                            <small>Versão de 09.08.2016</small>
+                            <a href="downloads/prova.pdf" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
+                            <small>Versão de 28.03.2017</small>
                           </p>   
                     </div>
                   </div>
@@ -97,12 +96,12 @@ Qualquer coisa procurar o @rdmuniz :)
                     <div class="accordion-inner">
                           <p class="pull-right">
                             <a href="downloads/aula12.zip" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
-                            <small>Versão de 02.08.2016</small>
+                            <small>Versão de 28.03.2017</small>
                           </p>   
                     </div>
                   </div>
                 </div>
--->
+
               <div class="accordion-group">
                   <div class="accordion-heading">
                     <h3>
