--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Qualquer coisa procurar o @rdmuniz :)
 
     <div class="container">
           <div class="page-header">
-            <h1> Computação Aplicada ao Design I - 2016.2 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 28.03.2017</small></h1>
+            <h1> Computação Aplicada ao Design I - 2016.2 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 29.03.2017</small></h1>
           </div>
 
       <div class="row" id="content">
@@ -96,8 +96,12 @@ Qualquer coisa procurar o @rdmuniz :)
                     <div class="accordion-inner">
                           <p class="pull-right">
                             <a href="downloads/aula12.zip" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
-                            <small>Versão de 28.03.2017</small>
+                            <small>Versão de 29.03.2017</small>
                           </p>   
+                          <h3>Links</h3>
+                          <ul class="unstyled">
+                            <li><a href="downloads/aula12-ex.pdf"><i class="icon-globe"></i>Exercícios Aula 12</a></li>
+                           </ul>
                     </div>
                   </div>
                 </div>
@@ -138,7 +142,7 @@ Qualquer coisa procurar o @rdmuniz :)
                           </p>   
                           <h3>Links</h3>
                           <ul class="unstyled">
-                            <li><a href="downloads/aula10-ex-ok.pdf"><i class="icon-globe"></i>Exercícios Aula 09</a></li>
+                            <li><a href="downloads/aula10-ex-ok.pdf"><i class="icon-globe"></i>Exercícios Aula 10</a></li>
                            </ul>
                     </div>
                   </div>
