--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Qualquer coisa procurar o @rdmuniz :)
 
     <div class="container">
           <div class="page-header">
-            <h1> Computação Aplicada ao Design I - 2016.2 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 29.03.2017</small></h1>
+            <h1> Computação Aplicada ao Design I - 2016.2 <small> Rodrigo Medeiros</small> <small class="pull-right">Última atualização 04.04.2017</small></h1>
           </div>
 
       <div class="row" id="content">
@@ -76,7 +76,7 @@ Qualquer coisa procurar o @rdmuniz :)
                   <div id="aula13" class="accordion-body collapse">
                     <div class="accordion-inner">
                           <p class="pull-right">
-                            <a href="downloads/prova.pdf" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
+                            <a href="downloads/prova-ok.pdf" class="btn btn-success btn-large"><i class="icon-download icon-white"></i> Baixar slides</a><br>
                             <small>Versão de 28.03.2017</small>
                           </p>   
                     </div>
